--- a/title.tex
+++ b/title.tex
@@ -2,13 +2,13 @@
 \title{Monetary surprises paper}
 
 
-\author { Xolani Sibande\footnote{Corresponding Author.  Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \,\, 
-Özer Karagedikli\footnote{South East Asian Central Banks Research and Training (SEACEN) Centre;
-Centre for Applied Macroeconomic Analysis (CAMA);
-University of Marburg
-    Email: ozer@seacen.org.} \,\,
-Monique Reid\footnote{Economic Research Department, South African Reserve Bank; Email: monique.reid@resbank.co.za.} 
-}
+% \author { Xolani Sibande\footnote{Corresponding Author.  Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \,\, 
+% Özer Karagedikli\footnote{South East Asian Central Banks Research and Training (SEACEN) Centre;
+% Centre for Applied Macroeconomic Analysis (CAMA);
+% University of Marburg
+%     Email: ozer@seacen.org.} \,\,
+% Monique Reid\footnote{Economic Research Department, South African Reserve Bank; Email: monique.reid@resbank.co.za.} 
+% }
 \date{\today}
 \maketitle
 
